
[B][COLOR green]V 1.0.0 (Tuesday 06 October, 2015)[/COLOR][/B]

-- [COLOR yellow][B]Release[/COLOR][/B]
	- Do not forget to insert Indian IP address unless you're from India OR using Indian VPN